Fix alignleft and alignright in gutenberg-editor

--- a/sass/base/gutenberg.scss
+++ b/sass/base/gutenberg.scss
@@ -20,6 +20,18 @@
 // Gutenberg blocks
 @import '../gutenberg/boxed';
 
+// Fix alignleft and alignright figcaption width
+// Hack for achieving the same than in gutenberg-helpers.js
+[data-align="right"] figcaption,
+[data-align="left"] figcaption {
+  max-width: 200px;
+}
+
+[data-align="right"] figcaption {
+  margin-left: auto;
+  text-align: right;
+}
+
 // Wider editor
 // Default is 580px which is way too narrow
 .wp-block {
